--- a/src/pages/DdForm/main.css
+++ b/src/pages/DdForm/main.css
@@ -9,9 +9,10 @@ html {
 
 body {
   font-family: "Roboto", sans-serif;
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
   font-weight: 300;
+  margin: 0 10%;
 }
 
 h1 {
@@ -35,7 +36,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-bottom: 10px;
+  margin: 10px 0;
 }
 
 hr {
